--- a/program/notebooks/RPDF_method.ipynb
+++ b/program/notebooks/RPDF_method.ipynb
@@ -16,9 +16,7 @@
     "%matplotlib inline\n",
     "%config InlineBackend.figure_format = 'retina'\n",
     "\n",
-    "\n",
-    "\n",
-    "np.random.seed(1234)\n"
+    "np.random.seed(1234)"
    ]
   },
   {
@@ -694,7 +692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
