add generate process file

--- a/program/notebooks/main_price.ipynb
+++ b/program/notebooks/main_price.ipynb
@@ -815,14 +815,17 @@
     "    ax.plot(vol_path, 'darkgray', alpha=0.25)\n",
     "    ax.plot(path2, 'blue', alpha=0.25)\n",
     "\n",
-    "gray_patch = mpatches.Patch(color = 'darkgray', label = 'volatility paths')\n",
+    "orange_patch = mpatches.Patch(color = 'orange', label = 'volatility paths')\n",
     "blue_patch = mpatches.Patch(color = 'blue', label = 'Generated paths')\n",
     "\n",
     "\n",
     "\n",
+    "x = range(0, 101, 20)\n",
+    "ax.set_xticks(x)\n",
+    "ax.set_xticklabels([str(i/100) for i in x])\n",
+    "ax.set_xlabel(\"Timestamp\", fontsize=14)\n",
     "\n",
-    "plt.legend(handles=[blue_patch, gray_patch], fontsize=10)    \n",
-    "plt.xlabel(\"Timestamp\", fontsize=14)\n",
+    "plt.legend(handles=[blue_patch, orange_patch], fontsize=10)    \n",
     "\n",
     "#外枠の削除\n",
     "plt.gca().spines['right'].set_visible(False)\n",
