--- a/program/notebooks/main_price_spotVol.ipynb
+++ b/program/notebooks/main_price_spotVol.ipynb
@@ -2721,16 +2721,15 @@
     "\n",
     "    ax.plot(path2, 'blue', alpha=0.2)\n",
     "\n",
-    "gray_patch = mpatches.Patch(color = 'orange', label = 'volatility paths')\n",
+    "orange_patch = mpatches.Patch(color = 'orange', label = 'volatility paths')\n",
     "blue_patch = mpatches.Patch(color = 'blue', label = 'Generated paths')\n",
-    "\n",
     "\n",
     "x = range(0, 101, 20)\n",
     "ax.set_xticks(x)\n",
     "ax.set_xticklabels([str(i/100) for i in x])\n",
     "ax.set_xlabel(\"Timestamp\", fontsize=14)\n",
     "\n",
-    "plt.legend(handles=[blue_patch, gray_patch], fontsize=10)    \n",
+    "plt.legend(handles=[blue_patch, orange_patch], fontsize=10)    \n",
     "#外枠の削除\n",
     "plt.gca().spines['right'].set_visible(False)\n",
     "plt.gca().spines['top'].set_visible(False)\n",
